# pyfileflow

./: .flake8  README.md  TODO.md  appmap.yml  mypy.ini  noxfile.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: coverage.yml  release-drafter.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
examples/: basic_example.py  copybyvalueexample.py
src/pyfileflow/: __init__.py  fileorganizer.py  fselements.py  path.py  ppath.py  rule.py  rules.py  types.py  utils.py
src/pyfileflow/domain/: exceptions.py  file.py  folder.py  fselement.py
src/pyfileflow/utils/: alias.py  types.py  utils.py
tests/: conftest.py  test_clear_directory_util.py  test_file_organizer_directories.py  test_file_system_action.py  test_fileorganizer.py  test_fselements.py  test_path.py  test_rule.py  typeguard_ignore.py
tests/domain/: test_file.py  test_folder.py
